# bsky-net

./: .gitignore  README.md  overview.md  pyproject.toml
evals/: stance-eval-01.csv
evals/moderation/: stance-detection-raw.jsonl  stance-detection.jsonl  stance.jsonl  topic-stance-detection.jsonl
examples/: majority-demo.html  majority-demo.py  majority-model.ipynb  voter-model.ipynb  voter-model.py
examples/majority-demo_files/libs/bootstrap/: bootstrap-0227af85dac97cb52a6e3de01b1bc8bf.min.css  bootstrap-032d6213c574f0db54e4a99299ac5430.min.css  bootstrap-266885691f794675cbb14c781df050d5.min.css  bootstrap-4847e406479ebbad7133b7332f77fa09.min.css  bootstrap-53b3fc10477b3950eae5f81b042081d0.min.css  bootstrap-599fed2938281a842c2abf613da867e1.min.css  bootstrap-59ca6f9bc2652f51a026b7e9873aa42c.min.css  bootstrap-59ec2a26cf0990693b12219a7f4dc310.min.css  bootstrap-60d405b0241f8a4972ced7a799336d6c.min.css  bootstrap-64d96b1c87ef111820e8133750e2abd1.min.css  bootstrap-8c87aa3295216a22a32fa2a0ff31e401.min.css  bootstrap-b88228799effb233f67391508de92479.min.css  bootstrap-c6ad2285d98b332b39f97c490b83a589.min.css  bootstrap-d98fe22a8e2cbf398725867e86c6f3ea.min.css  bootstrap-efced57dac7eb86695c02ee84dd6316e.min.css
examples/majority-demo_files/libs/quarto-html/: quarto-syntax-highlighting-126265a2c1fa68d62a908b47b722af9b.css  quarto-syntax-highlighting-23504dfa93b9834cc4e0ed111f21ac64.css  quarto-syntax-highlighting-2a04f3694134fdc0690229208924d33b.css  quarto-syntax-highlighting-87a2e8e03b8c1bc815d25a45797fa036.css  quarto-syntax-highlighting-90ad957df32f72ae91f40bee9b2f97b2.css  quarto-syntax-highlighting-bdd2a4e1200f239fbeeba33d9ac1c1c4.css  quarto-syntax-highlighting-f588bbe517935913c248cc35d568cda8.css
notebooks/: bsky-net.py  build-graph.py  chain-of-thought.ipynb  eval-analysis.py  eval-gen.py  evaluate.py  opinion-skeleton.py  prompt-engineering-2.py  prompt-engineering.py  simulation.py  stance-classifier.py  test-generation.py  topic-analysis.py  topic-classifier.py  viz.py
prompts/: cot-structure.json
scripts/: benchmark.py  build-bsky-net.py  create-batch-files.py  create-stance-batches.py  create-topic-batches.py  download-data.py  filter-stream.py  firehose-stats.py  firehose.py  ping-batches.py  process-data.py  push-batch.py  push-batches.py  test-generation.py  upload-data.py  zip-batch-outputs.py
src/bsky_net/: __init__.py  prompts.py  utils.py
