[project]
name = "bsky-net"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertopic>=0.16.3",
    "python-dotenv>=1.0.1",
    "llvmlite>=0.43.0",
    "scikit-learn>=1.5.1",
    "transformers>=4.44.1",
    "bsky_net",
    # "graph_tool",
    "matplotlib>=3.9.2",
    "huggingface-hub>=0.24.6",
    "tiktoken>=0.7.0",
    "openai>=1.43.0",
    "fastcoref>=2.1.6",
    "pydantic>=2.9.2",
    "boto3>=1.35.27",
    "boto3-stubs[essential,s3]>=1.35.27",
    "seaborn>=0.13.2",
    "langid>=1.1.6",
    "networkx>=3.3",
    "plotly>=5.24.1",
    "numpy>=2.0.2",
]

[tool.uv.sources]
bsky-net = { path = './src/bsky_net' }
# graph_tool = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "jupytext>=1.16.4",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
    "notebook>=7.2.2",
    "pip>=24.3.1",
]
